# libratbag-rs

./: .gitignore  Cargo.toml  README.md  SESSION_DAEMON_PLAN.md  meson.build  meson_options.txt
data/: 60-ratbagd.rules
dbus/: org.freedesktop.ratbag1.service.in
ratbagctl-rs/: Cargo.toml
ratbagctl-rs/src/: dbus_client.rs
ratbagd/: ratbagd.service.in
ratbagd-rs/: Cargo.toml
ratbagd-rs/src/: device.rs  device_database.rs  main.rs  udev_monitor.rs
ratbagd-rs/src/dbus/: button.rs  device.rs  led.rs  manager.rs  mod.rs  profile.rs  resolution.rs
ratbagd-rs/src/driver/: hidpp.rs  hidpp10.rs  hidpp20.rs  logitech_g300.rs  mod.rs  roccat.rs  steelseries.rs
src/: error.rs  main.rs  udev_monitor.rs
src/engine/: actor.rs  device.rs  device_database.rs  mod.rs  test_device.rs
src/hal/: asus.rs  etekcity.rs  gskill.rs  hidpp.rs  hidpp10.rs  hidpp20.rs  logitech_g300.rs  logitech_g600.rs  marsgaming.rs  mod.rs  openinput.rs  roccat.rs  sinowealth.rs  sinowealth_nubwo.rs  steelseries.rs
src/ipc/: button.rs  device.rs  led.rs  manager.rs  mod.rs  profile.rs  resolution.rs
test/: conftest.py  ratbag_dbus.py  test_button_led.py  test_integration.py  test_manager_device.py  test_profile_resolution.py
