[package]
name = "ratbagd"
version = "2.0.0"
authors = ["Nilton Perim Neto <niltonperimneto@gmail.com>"]
edition = "2024"
description = "A Rust rewrite of the ratbagd daemon and ratbagctl CLI for configuring gaming mice"
license = "GPL-3.0-or-later"

[features]
## Enable developer-only DBus hooks (LoadTestDevice / ResetTestDevice).
## Never enable in production builds.
dev-hooks = []

[[bin]]
name = "ratbagctl"
path = "src/bin/ratbagctl/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.31.3", features = ["ioctl", "fs", "poll"] }
udev = "0.9"
tokio-stream = "0.1"
configparser = "3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
## test-util enables tokio::time auto-advance (start_paused) so driver
## timeout paths can be unit-tested without real 500 ms waits.
tokio = { version = "1", features = ["full", "test-util"] }
