option('systemd-unit-dir',
	type : 'string',
	value : '',
	description : 'systemd unit directory [default=$libdir/systemd/system]')

option('dbus-root-dir',
	type : 'string',
	value : '',
	description : 'dbus service directory [default=$datadir/dbus-1]')

option('dbus-group',
	type: 'string',
	value : '',
	description : 'The UNIX group that is granted access to the ratbagd D-Bus service. By default all users may access it.')

option('systemd',
	type : 'boolean',
	value : true,
	description : 'Build systemd unit files')
