[package]
name = "ratbagctl-rs"
version = "2.0.0"
authors = ["Nilton Perim Neto <niltonperimneto@gmail.com>"]
edition = "2024"
description = "Command-line tool to configure gaming mice via the ratbagd DBus daemon"
license = "GPL-3.0-or-later"

[[bin]]
name = "ratbagctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
