[package]
name = "ratbagd-rs"
version = "1.0.0"
authors = ["Nilton Perim Neto <niltonperimneto@gmail.com>"]
edition = "2024"
description = "A Rust rewrite of the ratbagd daemon for configuring gaming mice"
license = "GPLv3"

[features]
## Enable developer-only DBus hooks (LoadTestDevice / ResetTestDevice).
## Never enable in production builds.
dev-hooks = []

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["ioctl", "fs", "poll"] }
udev = "0.9"
tokio-stream = "0.1"
configparser = "3"
async-trait = "0.1"
